tests/artifacts/perf/bd-m4s2c-20260422T204202Z/cpu_update_script.stderr
  [2m2026-04-22T21:10:45.426345Z[0m [33m WARN[0m [1;33mrch::hook[0m[33m: [33mexec called with non-compilation command: bash tests/artifacts/perf/bd-m4s2c-20260422T204202Z/run_cpu_update.sh[0m
    [2;3mat[0m rch/src/hook.rs:172 [2;3mon[0m ThreadId(1)

   Compiling cfg-if v1.0.4
   Compiling proc-macro2 v1.0.106
   Compiling unicode-ident v1.0.24
   Compiling quote v1.0.45
   Compiling libc v0.2.185
   Compiling serde_core v1.0.228
   Compiling typenum v1.20.0
   Compiling serde v1.0.228
   Compiling allocator-api2 v0.2.21
   Compiling once_cell v1.21.4
   Compiling autocfg v1.5.0
   Compiling foldhash v0.2.0
   Compiling equivalent v1.0.2
   Compiling version_check v0.9.5
   Compiling memchr v2.8.0
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.9
   Compiling cfg_aliases v0.2.1
   Compiling zmij v1.0.21
   Compiling crossbeam-utils v0.8.21
   Compiling cmov v0.5.3
   Compiling serde_json v1.0.149
   Compiling smallvec v1.15.1
   Compiling anyhow v1.0.102
   Compiling itoa v1.0.18
   Compiling parking_lot_core v0.9.12
   Compiling rustix v1.1.4
   Compiling regex-syntax v0.8.10
   Compiling const-oid v0.10.2
   Compiling scopeguard v1.2.0
   Compiling either v1.15.0
   Compiling cpufeatures v0.3.0
   Compiling thiserror v2.0.18
   Compiling linux-raw-sys v0.12.1
   Compiling getrandom v0.4.2
   Compiling pin-project-lite v0.2.17
   Compiling nix v0.31.2
   Compiling lock_api v0.4.14
   Compiling io-uring v0.7.12
   Compiling cc v1.2.60
   Compiling lazy_static v1.5.0
   Compiling tracing-core v0.1.36
   Compiling virtue-next v0.1.3
   Compiling itertools v0.14.0
   Compiling fastrand v2.4.1
   Compiling signal-hook v0.4.4
   Compiling ctutils v0.4.2
   Compiling log v0.4.29
   Compiling crc32fast v1.5.0
   Compiling generic-array v0.14.7
   Compiling sharded-slab v0.1.7
   Compiling thread_local v1.1.9
   Compiling parking v2.2.1
   Compiling futures-io v0.3.32
   Compiling unty-next v0.1.1
   Compiling num-traits v0.2.19
   Compiling hashbrown v0.17.0
   Compiling memoffset v0.9.1
   Compiling futures-core v0.3.32
   Compiling bytes v1.11.1
   Compiling nu-ansi-term v0.50.3
   Compiling arrayref v0.3.9
   Compiling constant_time_eq v0.4.2
   Compiling futures-lite v2.6.1
   Compiling slab v0.4.12
   Compiling base64 v0.22.1
   Compiling arrayvec v0.7.6
   Compiling xxhash-rust v0.8.15
   Compiling simdutf8 v0.1.5
   Compiling zerocopy v0.8.48
   Compiling subtle v2.6.1
   Compiling ahash v0.8.12
   Compiling iana-time-zone v0.1.65
   Compiling cpufeatures v0.2.17
   Compiling aho-corasick v1.1.4
   Compiling semver v1.0.28
   Compiling nix v0.29.0
   Compiling tracing-log v0.2.0
   Compiling zeroize v1.8.2
   Compiling opaque-debug v0.3.1
   Compiling pollster v0.4.0
   Compiling base64ct v1.8.3
   Compiling bumpalo v3.20.2
   Compiling crossbeam-epoch v0.9.18
   Compiling crossbeam-queue v0.3.12
   Compiling hashbrown v0.16.1
   Compiling pkg-config v0.3.33
   Compiling rustc_version v0.4.1
   Compiling vcpkg v0.2.15
   Compiling ucd-trie v0.1.7
   Compiling bincode_derive-next v2.1.0
   Compiling winnow v0.7.15
   Compiling toml_write v0.1.2
   Compiling fallible-streaming-iterator v0.1.9
   Compiling fallible-iterator v0.3.0
   Compiling syn v2.0.117
   Compiling hybrid-array v0.4.10
   Compiling crossbeam-deque v0.8.6
   Compiling crypto-common v0.2.1
   Compiling block-buffer v0.12.0
   Compiling indexmap v2.14.0
   Compiling crc32c v0.6.8
   Compiling lru v0.16.4
   Compiling blake3 v1.8.4
   Compiling rmp v0.8.15
   Compiling chrono v0.4.44
   Compiling block-buffer v0.10.4
   Compiling inout v0.1.4
   Compiling libsqlite3-sys v0.30.1
   Compiling errno v0.3.14
   Compiling getrandom v0.2.17
   Compiling socket2 v0.6.3
   Compiling signal-hook-registry v1.4.8
   Compiling rand_core v0.6.4
   Compiling parking_lot v0.12.5
   Compiling regex-automata v0.4.14
   Compiling crypto-common v0.1.7
   Compiling password-hash v0.5.0
   Compiling digest v0.10.7
   Compiling cipher v0.4.4
   Compiling universal-hash v0.5.1
   Compiling aead v0.5.2
   Compiling digest v0.11.2
   Compiling poly1305 v0.8.0
   Compiling blake2 v0.10.6
   Compiling sha2 v0.10.9
   Compiling chacha20 v0.9.1
   Compiling sha1 v0.11.0
   Compiling sha2 v0.11.0
   Compiling hmac v0.13.0
   Compiling chacha20poly1305 v0.10.1
   Compiling argon2 v0.5.3
   Compiling bitflags v2.11.1
   Compiling ppv-lite86 v0.2.21
   Compiling serde_derive v1.0.228
   Compiling tracing-attributes v0.1.31
   Compiling thiserror-impl v2.0.18
   Compiling pin-project-internal v1.1.11
   Compiling prost-derive v0.13.5
   Compiling asupersync-macros v0.3.1
   Compiling visibility v0.1.1
   Compiling rand_chacha v0.3.1
   Compiling rand v0.8.6
   Compiling matchers v0.2.0
   Compiling regex v1.12.3
   Compiling pin-project v1.1.11
   Compiling tracing v0.1.44
   Compiling fsqlite-error v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-error)
   Compiling prost v0.13.5
   Compiling polling v3.11.0
   Compiling tempfile v3.27.0
   Compiling franken-kernel v0.3.1
   Compiling tracing-serde v0.2.0
   Compiling franken-evidence v0.3.1
   Compiling rmp-serde v1.3.1
   Compiling hashbrown v0.14.5
   Compiling json5 v1.3.1
   Compiling serde_spanned v0.6.9
   Compiling toml_datetime v0.6.11
   Compiling bincode-next v2.1.0
   Compiling tracing-subscriber v0.3.23
   Compiling toml_edit v0.22.27
   Compiling franken-decision v0.3.1
   Compiling dashmap v6.1.0
   Compiling hashlink v0.9.1
   Compiling asupersync v0.3.1
   Compiling toml v0.8.23
   Compiling rusqlite v0.32.1
   Compiling fsqlite-types v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-types)
   Compiling fsqlite-func v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-func)
   Compiling fsqlite-observability v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-observability)
   Compiling fsqlite-ast v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ast)
   Compiling fsqlite-vfs v0.1.3 (/data/projects/frankensqlite/crates/fsqlite-vfs)
   Compiling fsqlite-parser v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-parser)
   Compiling fsqlite-ext-icu v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-icu)
   Compiling fsqlite-ext-misc v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-misc)
   Compiling fsqlite-ext-json v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-json)
   Compiling fsqlite-ext-fts5 v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-fts5)
   Compiling fsqlite-ext-rtree v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-ext-rtree)
   Compiling fsqlite-wal v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-wal)
   Compiling fsqlite-planner v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-planner)
   Compiling fsqlite-pager v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-pager)
   Compiling fsqlite-btree v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-btree)
   Compiling fsqlite-mvcc v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-mvcc)
   Compiling fsqlite-vdbe v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-vdbe)
   Compiling fsqlite-core v0.1.2 (/data/projects/frankensqlite/crates/fsqlite-core)
error[E0599]: no method named `clone` found for struct `JoinTableSource` in the current scope
     --> crates/fsqlite-core/src/connection.rs:18208:54
      |
18208 |                     permuted.push(table_sources[idx].clone());
      |                                                      ^^^^^ method not found in `JoinTableSource`
...
60965 | struct JoinTableSource {
      | ---------------------- method `clone` not found for this struct
      |
      = help: items from traits can only be used if the trait is implemented and in scope
      = note: the following trait defines an item `clone`, perhaps you need to implement it:
              candidate #1: `Clone`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `fsqlite-core` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
